# heart-attack-prediction

./: .gitignore  Fase1.ipynb  Fase1.py  Fase2.ipynb  Fase2.py  Fase3.ipynb  Fase3.py  Fase4.ipynb  Fase4.py  README.md  pyproject.toml  requirements.txt
src/: Fase1.ipynb  Fase1.py  Fase2.ipynb  Fase2.py  Fase3.ipynb  Fase3.py
testes_fases_completas/: Processo_completo-TA.ipynb  Processo_completo-TB.html  Processo_completo-TB.ipynb
