[tool.taskipy.tasks]
fase1 = "python fase1.py"
fase2 = "python fase2.py"
fase3 = "python fase3.py"
fase4 = "python fase4.py"


fase1_dep = "task fase1"
pre_fase2_dep = "task fase1_dep"
fase2_dep = "task fase2"
pre_fase3_dep = "task fase2_dep"
fase3_dep = "task fase3"
pre_fase4_dep = "task fase2_dep"
fase4_dep = "task fase4"

jupyter = "jupyter-notebook 2>/dev/null &"
jupyter-list = "jupyter notebook list"

[tool.poetry]
name = "heart-attack-prediction"
version = "0.1.0"
description = ""
authors = ["Heloisa Machado"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
notebook = "^7.2.2"
notebook-shim = "^0.2.4"
jupytext = "^1.16.4"
imbalanced-learn = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
