[tool.taskipy.tasks]
fase1 = "python Fase1.py"
fase2 = "python Fase2.py"
fase3 = "python Fase3.py"
fase4 = "python Fase4.py"
fase4-pycaret = "python Fase4-Pycaret.py"

fase1_dep = "task fase1"
pre_fase2_dep = "task fase1_dep"
fase2_dep = "task fase2"
pre_fase3_dep = "task fase2_dep"
fase3_dep = "task fase3"
pre_fase4_dep = "task fase2_dep"
fase4_dep = "task fase4"

jupyter = "jupyter-notebook 2>/dev/null &"
jupyter-list = "jupyter notebook list"

[tool.poetry]
name = "heart-attack-prediction"
version = "0.1.0"
description = ""
authors = ["Darlon Vasata"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
pycaret = "3.3.2"
kaleido = "0.2.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
notebook-shim = "^0.2.4"
# jupytext = "^1.16.4"
# imbalanced-learn = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
